@@ -1,5 +1,6 @@
 Changelog for CmdArgs
 
+    Improve the documentation surrounding pure annotations.
 0.6.7
     #395, don't put two newlines after --help or --version
 0.6.6
